# ReliST

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: README.md  example_cell2location.yaml  example_destvi.yaml  example_precomputed.yaml  example_rctd.yaml  example_stereoscope.yaml  example_tangram.yaml  revision_known_composition_cell2location.yaml  revision_known_composition_rctd.yaml  revision_known_composition_tangram.yaml
docs/: data_sources.md  deployment.md  revision_v0.2.0.md
revision/v0.2.0-revision/: README.md  release_files.sha256  selected_runs.csv  source_tables.sha256
scripts/: README.md  build_revision_figures.py  export_reference_signatures.py  run_base_model.py  run_rctd_native.R  run_revision_component_ablation.py  run_revision_known_composition_benchmark.py  run_revision_known_composition_multimodel_eval.py  run_revision_reference_perturbation.py  run_revision_reference_perturbation_component_ablation.py  run_revision_threshold_sensitivity.py  run_revision_uncertainty_baseline_eval.py  run_risk_scoring.py  run_stereoscope_native.py  summarize_revision_known_composition_seed_repeats.py  validate_ready_data.py
src/st_risk/: __init__.py  config.py  paths.py
tests/: README.md  test_config.py  test_pipeline_smoke.py  test_results_layout.py
tests/data/: test_harmonize.py  test_validate_ready_data.py
tests/eval/: test_dual_axis.py  test_layer_eval.py  test_reference_eval.py
tests/models/: test_base_model_interface.py
tests/reporting/: test_anchored_validation.py  test_decision_support.py  test_gallery.py
tests/risk/: test_score.py  (+3 more)
(+49 files in other folders)
