[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "relist-st"
version = "0.1.0"
description = "ReliST: a reliability-aware risk layer for spatial transcriptomics deconvolution"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "ReliST contributors" },
]
keywords = ["spatial transcriptomics", "deconvolution", "reliability", "risk scoring"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "anndata",
  "matplotlib",
  "numpy",
  "pandas",
  "pyyaml",
  "scanpy",
  "scikit-learn",
  "scipy",
  "seaborn",
]

[project.optional-dependencies]
dev = ["pytest"]
scvi = ["scvi-tools", "torch"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
